library/src/libqevent.h

typedef struct QEventPoint QEventPoint;
typedef struct QInputDevice QInputDevice;
typedef struct QInputEvent QInputEvent;
typedef struct QObject QObject;
typedef struct QPointF QPointF;
typedef struct QPointerEvent QPointerEvent;
typedef struct QPointingDevice QPointingDevice;
typedef struct QSinglePointEvent QSinglePointEvent;
QTLIBC_API QInputEvent* QInputEvent_new(int typeVal, QInputDevice* m_dev);
QTLIBC_API QInputEvent* QInputEvent_new2(int typeVal, QInputDevice* m_dev, int modifiers);
QTLIBC_API QInputEvent* QInputEvent_Clone(const QInputEvent* self);
QTLIBC_API QInputDevice* QInputEvent_Device(const QInputEvent* self);
QTLIBC_API int QInputEvent_DeviceType(const QInputEvent* self);
QTLIBC_API int QInputEvent_Modifiers(const QInputEvent* self);
QTLIBC_API void QInputEvent_SetModifiers(QInputEvent* self, int modifiers);
QTLIBC_API unsigned long long QInputEvent_Timestamp(const QInputEvent* self);
QTLIBC_API void QInputEvent_SetTimestamp(QInputEvent* self, unsigned long long timestamp);
QTLIBC_API void QInputEvent_Delete(QInputEvent* self);
QTLIBC_API QPointerEvent* QPointerEvent_new(int typeVal, QPointingDevice* dev);
QTLIBC_API QPointerEvent* QPointerEvent_new2(int typeVal, QPointingDevice* dev, int modifiers);
QTLIBC_API QPointerEvent* QPointerEvent_new3(int typeVal, QPointingDevice* dev, int modifiers, libqt_list /* of QEventPoint* */ points);
QTLIBC_API QPointerEvent* QPointerEvent_Clone(const QPointerEvent* self);
QTLIBC_API QPointingDevice* QPointerEvent_PointingDevice(const QPointerEvent* self);
QTLIBC_API int QPointerEvent_PointerType(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetTimestamp(QPointerEvent* self, unsigned long long timestamp);
QTLIBC_API ptrdiff_t QPointerEvent_PointCount(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_Point(QPointerEvent* self, ptrdiff_t i);
QTLIBC_API libqt_list /* of QEventPoint* */ QPointerEvent_Points(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_PointById(QPointerEvent* self, int id);
QTLIBC_API bool QPointerEvent_AllPointsGrabbed(const QPointerEvent* self);
QTLIBC_API bool QPointerEvent_IsBeginEvent(const QPointerEvent* self);
QTLIBC_API bool QPointerEvent_IsUpdateEvent(const QPointerEvent* self);
QTLIBC_API bool QPointerEvent_IsEndEvent(const QPointerEvent* self);
QTLIBC_API bool QPointerEvent_AllPointsAccepted(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetAccepted(QPointerEvent* self, bool accepted);
QTLIBC_API QObject* QPointerEvent_ExclusiveGrabber(const QPointerEvent* self, QEventPoint* point);
QTLIBC_API void QPointerEvent_SetExclusiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* exclusiveGrabber);
QTLIBC_API void QPointerEvent_ClearPassiveGrabbers(QPointerEvent* self, QEventPoint* point);
QTLIBC_API bool QPointerEvent_AddPassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API bool QPointerEvent_RemovePassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API void QPointerEvent_Delete(QPointerEvent* self);
QTLIBC_API int QSinglePointEvent_Button(const QSinglePointEvent* self);
QTLIBC_API int QSinglePointEvent_Buttons(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_Position(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_ScenePosition(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_GlobalPosition(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsBeginEvent(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsUpdateEvent(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsEndEvent(const QSinglePointEvent* self);
QTLIBC_API QObject* QSinglePointEvent_ExclusivePointGrabber(const QSinglePointEvent* self);
QTLIBC_API void QSinglePointEvent_Delete(QSinglePointEvent* self);