src/qt/libqevent.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QWheelEvent__
{
	DefaultDeltasPerStep = 120,
}
[AllowDuplicates]
public enum QPlatformSurfaceEvent__SurfaceEventType
{
	SurfaceCreated = 0,
	SurfaceAboutToBeDestroyed = 1,
}
[AllowDuplicates]
public enum QContextMenuEvent__Reason
{
	Mouse = 0,
	Keyboard = 1,
	Other = 2,
}
[AllowDuplicates]
public enum QInputMethodEvent__AttributeType
{
	TextFormat = 0,
	Cursor = 1,
	Language = 2,
	Ruby = 3,
	Selection = 4,
}
[AllowDuplicates]
public enum QScrollEvent__ScrollState
{
	ScrollStarted = 0,
	ScrollUpdated = 1,
	ScrollFinished = 2,
}
public interface IQInputEvent
{
	void* NativePtr { get; }
}
public class QInputEvent : IQInputEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(int64 typeVal, IQInputDevice m_dev)
	{
		this.nativePtr = CQt.QInputEvent_new(typeVal, (m_dev == null) ? null : (void*)m_dev.NativePtr);
	}
	
	public ~this()
	{
		CQt.QInputEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QInputEvent_Clone(this.nativePtr);
	}
	
	public void* Device()
	{
		return CQt.QInputEvent_Device(this.nativePtr);
	}
	
	public int64 DeviceType()
	{
		return CQt.QInputEvent_DeviceType(this.nativePtr);
	}
	
	public int64 Modifiers()
	{
		return CQt.QInputEvent_Modifiers(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QInputEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QInputEvent_Timestamp(this.nativePtr);
	}
	
	public virtual void SetTimestamp(uint64 timestamp)
	{
		CQt.QInputEvent_SetTimestamp(this.nativePtr, timestamp);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QInputEvent_new")]
	public static extern void* QInputEvent_new(int64 typeVal, void* m_dev);
	[LinkName("QInputEvent_new2")]
	public static extern void* QInputEvent_new2(int64 typeVal, void* m_dev, int64 modifiers);
	[LinkName("QInputEvent_Clone")]
	public static extern void* QInputEvent_Clone(void* c_this);
	[LinkName("QInputEvent_Device")]
	public static extern void* QInputEvent_Device(void* c_this);
	[LinkName("QInputEvent_DeviceType")]
	public static extern int64 QInputEvent_DeviceType(void* c_this);
	[LinkName("QInputEvent_Modifiers")]
	public static extern int64 QInputEvent_Modifiers(void* c_this);
	[LinkName("QInputEvent_SetModifiers")]
	public static extern void QInputEvent_SetModifiers(void* c_this, int64 modifiers);
	[LinkName("QInputEvent_Timestamp")]
	public static extern uint64 QInputEvent_Timestamp(void* c_this);
	[LinkName("QInputEvent_SetTimestamp")]
	public static extern void QInputEvent_SetTimestamp(void* c_this, uint64 timestamp);
	/// Delete this object from C++ memory
	[LinkName("QInputEvent_Delete")]
	public static extern void QInputEvent_Delete(void* self);
}
public interface IQPointerEvent
{
	void* NativePtr { get; }
}
public class QPointerEvent : IQPointerEvent, IQInputEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(int64 typeVal, IQPointingDevice dev)
	{
		this.nativePtr = CQt.QPointerEvent_new(typeVal, (dev == null) ? null : (void*)dev.NativePtr);
	}
	
	public ~this()
	{
		CQt.QPointerEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QPointerEvent_Clone(this.nativePtr);
	}
	
	public void* PointingDevice()
	{
		return CQt.QPointerEvent_PointingDevice(this.nativePtr);
	}
	
	public int64 PointerType()
	{
		return CQt.QPointerEvent_PointerType(this.nativePtr);
	}
	
	public virtual void SetTimestamp(uint64 timestamp)
	{
		CQt.QPointerEvent_SetTimestamp(this.nativePtr, timestamp);
	}
	
	public int32 PointCount()
	{
		return CQt.QPointerEvent_PointCount(this.nativePtr);
	}
	
	public void* Point(int32 i)
	{
		return CQt.QPointerEvent_Point(this.nativePtr, i);
	}
	
	public void[] Points()
	{
		return CQt.QPointerEvent_Points(this.nativePtr);
	}
	
	public void* PointById(int32 id)
	{
		return CQt.QPointerEvent_PointById(this.nativePtr, id);
	}
	
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed(this.nativePtr);
	}
	
	public virtual bool IsBeginEvent()
	{
		return CQt.QPointerEvent_IsBeginEvent(this.nativePtr);
	}
	
	public virtual bool IsUpdateEvent()
	{
		return CQt.QPointerEvent_IsUpdateEvent(this.nativePtr);
	}
	
	public virtual bool IsEndEvent()
	{
		return CQt.QPointerEvent_IsEndEvent(this.nativePtr);
	}
	
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public void* ExclusiveGrabber(IQEventPoint point)
	{
		return CQt.QPointerEvent_ExclusiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr);
	}
	
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr, (exclusiveGrabber == null) ? null : (void*)exclusiveGrabber.NativePtr);
	}
	
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers(this.nativePtr, (point == default) ? default : (void*)point.NativePtr);
	}
	
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr, (grabber == null) ? null : (void*)grabber.NativePtr);
	}
	
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr, (grabber == null) ? null : (void*)grabber.NativePtr);
	}
	
	public void* Device()
	{
		return CQt.QInputEvent_Device(this.nativePtr);
	}
	
	public int64 DeviceType()
	{
		return CQt.QInputEvent_DeviceType(this.nativePtr);
	}
	
	public int64 Modifiers()
	{
		return CQt.QInputEvent_Modifiers(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QInputEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QInputEvent_Timestamp(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QPointerEvent_new")]
	public static extern void* QPointerEvent_new(int64 typeVal, void* dev);
	[LinkName("QPointerEvent_new2")]
	public static extern void* QPointerEvent_new2(int64 typeVal, void* dev, int64 modifiers);
	[LinkName("QPointerEvent_new3")]
	public static extern void* QPointerEvent_new3(int64 typeVal, void* dev, int64 modifiers, void[] points);
	[LinkName("QPointerEvent_Clone")]
	public static extern void* QPointerEvent_Clone(void* c_this);
	[LinkName("QPointerEvent_PointingDevice")]
	public static extern void* QPointerEvent_PointingDevice(void* c_this);
	[LinkName("QPointerEvent_PointerType")]
	public static extern int64 QPointerEvent_PointerType(void* c_this);
	[LinkName("QPointerEvent_SetTimestamp")]
	public static extern void QPointerEvent_SetTimestamp(void* c_this, uint64 timestamp);
	[LinkName("QPointerEvent_PointCount")]
	public static extern int32 QPointerEvent_PointCount(void* c_this);
	[LinkName("QPointerEvent_Point")]
	public static extern void* QPointerEvent_Point(void* c_this, int32 i);
	[LinkName("QPointerEvent_Points")]
	public static extern void[] QPointerEvent_Points(void* c_this);
	[LinkName("QPointerEvent_PointById")]
	public static extern void* QPointerEvent_PointById(void* c_this, int32 id);
	[LinkName("QPointerEvent_AllPointsGrabbed")]
	public static extern bool QPointerEvent_AllPointsGrabbed(void* c_this);
	[LinkName("QPointerEvent_IsBeginEvent")]
	public static extern bool QPointerEvent_IsBeginEvent(void* c_this);
	[LinkName("QPointerEvent_IsUpdateEvent")]
	public static extern bool QPointerEvent_IsUpdateEvent(void* c_this);
	[LinkName("QPointerEvent_IsEndEvent")]
	public static extern bool QPointerEvent_IsEndEvent(void* c_this);
	[LinkName("QPointerEvent_AllPointsAccepted")]
	public static extern bool QPointerEvent_AllPointsAccepted(void* c_this);
	[LinkName("QPointerEvent_SetAccepted")]
	public static extern void QPointerEvent_SetAccepted(void* c_this, bool accepted);
	[LinkName("QPointerEvent_ExclusiveGrabber")]
	public static extern void* QPointerEvent_ExclusiveGrabber(void* c_this, void* point);
	[LinkName("QPointerEvent_SetExclusiveGrabber")]
	public static extern void QPointerEvent_SetExclusiveGrabber(void* c_this, void* point, void* exclusiveGrabber);
	[LinkName("QPointerEvent_ClearPassiveGrabbers")]
	public static extern void QPointerEvent_ClearPassiveGrabbers(void* c_this, void* point);
	[LinkName("QPointerEvent_AddPassiveGrabber")]
	public static extern bool QPointerEvent_AddPassiveGrabber(void* c_this, void* point, void* grabber);
	[LinkName("QPointerEvent_RemovePassiveGrabber")]
	public static extern bool QPointerEvent_RemovePassiveGrabber(void* c_this, void* point, void* grabber);
	/// Delete this object from C++ memory
	[LinkName("QPointerEvent_Delete")]
	public static extern void QPointerEvent_Delete(void* self);
}
public interface IQSinglePointEvent
{
	void* NativePtr { get; }
}
public class QSinglePointEvent : IQSinglePointEvent, IQPointerEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public ~this()
	{
		CQt.QSinglePointEvent_Delete(this.nativePtr);
	}
	
	public int64 Button()
	{
		return CQt.QSinglePointEvent_Button(this.nativePtr);
	}
	
	public int64 Buttons()
	{
		return CQt.QSinglePointEvent_Buttons(this.nativePtr);
	}
	
	public void Position()
	{
		CQt.QSinglePointEvent_Position(this.nativePtr);
	}
	
	public void ScenePosition()
	{
		CQt.QSinglePointEvent_ScenePosition(this.nativePtr);
	}
	
	public void GlobalPosition()
	{
		CQt.QSinglePointEvent_GlobalPosition(this.nativePtr);
	}
	
	public virtual bool IsBeginEvent()
	{
		return CQt.QSinglePointEvent_IsBeginEvent(this.nativePtr);
	}
	
	public virtual bool IsUpdateEvent()
	{
		return CQt.QSinglePointEvent_IsUpdateEvent(this.nativePtr);
	}
	
	public virtual bool IsEndEvent()
	{
		return CQt.QSinglePointEvent_IsEndEvent(this.nativePtr);
	}
	
	public void* ExclusivePointGrabber()
	{
		return CQt.QSinglePointEvent_ExclusivePointGrabber(this.nativePtr);
	}
